Scripts: replaced "-Xlog:gc" by "-verbose:gc"