@@ -4,5 +4,5 @@ schema="WorstCase"
 numberElements=10
 documents=Documents/${schema}-$numberElements/Random
 
-java -Xlog:gc -jar jsonvalidation-benchmarks-2.0-jar-with-dependencies.jar\
+java -verbose:gc -jar jsonvalidation-benchmarks-2.0-jar-with-dependencies.jar\
     memory ${schema} ${documents}
