@@ -3,5 +3,5 @@
 schema="recursiveList.json"
 documents=Documents/${schema}/Random
 
-java -Xlog:gc -jar jsonvalidation-benchmarks-2.0-jar-with-dependencies.jar\
+java -verbose:gc -jar jsonvalidation-benchmarks-2.0-jar-with-dependencies.jar\
     memory ${schema} ${documents}
